Fix alignment

--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -30,6 +30,12 @@
   .banner--content-align-left .banner__box {
     text-align: left;
   }
+
+  .banner--content-align-left.banner--desktop-transparent .banner__box,
+  .banner--content-align-right.banner--desktop-transparent .banner__box,
+  .banner--medium.banner--desktop-transparent .banner__box {
+    max-width: 68rem;
+  }
 }
 
 @media screen and (max-width: 749px) {
